assets/css/two_section_style.css
body{
	font-family: 'Fredericka the Great', cursive;
	font-family: 'Sacramento', cursive;
	font-family: 'Karla', sans-serif;
	margin:0;
	padding:0;
}


.section{
	width:100%;
	height: 1000px;
	position: relative;
}

#projectspage{
	background-color: white;
}

#tinkeringpage{
	background-color: white;
}#title_container{
	text-align: center;
	/* margin-left: 10%; */
	width: 100%;
	height: 100%;
	z-index: 40;
	position: absolute;
}


#textbox{
	/* display: table; */
	margin: 0 auto;
	position: relative;
	top: 20%;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	/* left: 45%; */
}

#title_container2{
	text-align: center;
	/* margin-left: 10%; */
	width: 100%;
	height: 100%;
	z-index: 40;
	position: absolute;
}

#textbox2{
	/* display: table; */
	margin: 0 auto;
	position: relative;
	top: 15%;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	/* left: 45%; */
}


.myname{
	font-family: 'Fredericka the Great';
	font-size: 55px;
	z-index: 40;
	color:#40485a;
}


.subtitle{
	font-family: 'Karla';
	font-weight: 300;
	font-size: 16px;
	letter-spacing: 3px;
	/* text-align: left; */
	/* margin-left: 10px; */
	/* margin-top: 40%; */
	z-index: 30;
	text-transform: uppercase;
	padding-bottom: 5px;
	color:#40485a;
}

.cover_img_scaled{
	display: inline-block;
	height: 100%;
	width: 100%;
	object-fit: cover;
	z-index: 20;
	opacity: .45;
}

#topbar {
	background-color: white;
	/*border:solid;
	border-width:1px;
	border-color:#eeeeee;*/
	position:fixed;
	width:100%;
	height: 80px;
	z-index: 200;
	-webkit-box-shadow: 0px 1px 43px -16px rgba(0,0,0,1);
	-moz-box-shadow: 0px 1px 43px -16px rgba(0,0,0,1);
	box-shadow: 0px 1px 43px -16px rgba(0,0,0,1);
}


.logo_scaled{
	display: inline-block;
	margin-top: 15px;
	margin-left: 5%;
	height:65px;
}

.logo_scaled:hover{
	opacity:0.6;
	cursor:pointer;
}

#topbar-items{
	position:absolute;
	margin-left:60%;
	top:35px;
	z-index: 100;
	
}
.topbar-text {
	display: inline;
	color: #40485a;
	font-size: 16px;
	letter-spacing:  3px;
	font-weight:300;
	padding-left:50px;
	line-height: 10px;
	text-transform: uppercase;
}

.topbar-text:hover{
	opacity:0.6;
	transform: scale(1.2);
	-webkit-transform: scale(1.2);
	-moz-transform: scale(1.2);
}

#grid_container{
	
width: 950px;
	
/* height: 80%; */
	
top: 35%;
	
z-index: 120;
	
/* display: table; */
	
margin: 0 auto;
	
position: relative;
}

#grid_container2{
	
width: 950px;
	
/* height: 80%; */
	
top: 30%;
	
z-index: 120;
	
/* display: table; */
	
margin: 0 auto;
	
position: relative;
}


.grid_img_scaled{
	display: inline-block;
	height: 300px;
	width: 300px;
	object-fit: cover;
	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
	filter: grayscale(100%);
	-moz-filter: grayscale(100%);
	opacity:.6;
	transition:1.25s;
	-webkit-transition:1.25s;
	-moz-transition:1.25s;
	padding: 1.5px;
	cursor:pointer;
}

.grid_img_scaled:hover{
	-webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
    filter: grayscale(0%);
    -moz-filter: grayscale(0%);
    opacity:.8;
}


.no-js #loader { display: none;  }
.js #loader { display: block; position: absolute; left: 100px; top: 0; }
.se-pre-con {
	position: fixed;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: 9999;
	background: url(../img/loading.gif) center no-repeat #fff;
}




@media(max-width: 500px){
	#textbox{
	/* display: table; */
	margin: 0 auto;
	position: relative;
	top: 30%;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	left: 68%;
}

#grid_container {
    width: 950px;
    /* height: 80%; */
    top: 43%;
    z-index: 120;
    /* display: table; */
    margin: 0 auto;
    position: relative;
}

#textbox2{
	/* display: table; */
	margin: 0 auto;
	position: relative;
	top: 15%;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	left: 68%;
}

.topbar-text {
	
	color: #40485a;
	font-size: 35px;
	letter-spacing:  7px;
	font-weight:300;
	padding-left:75px; 
	line-height: 75px;
	text-transform: uppercase;
    padding-right: 35px;
}

#topbar{
	height:250px;
}

.logo_scaled {
    display: inline-block;
    margin-top: 60px;
    margin-left: 5%;
    height: 150px;
}

#topbar-items{
	
	margin-left: 55%;
	top: 5px;
	z-index: 100;
}

}


@media(max-width:1024px) and (min-width:500px){

	.topbar-text {
	display: inline;
	color: #40485a;
	font-size: 16px;
	letter-spacing:  3px;
	font-weight:300;
	padding-left: 30px;
	line-height: 10px;
	text-transform: uppercase;
}
#textbox {
    
    margin-left: 25%;
}

#textbox2 {
    
    margin-left: 25%;
}
}

